--- a/_layouts/locations.html
+++ b/_layouts/locations.html
@@ -1,52 +1,396 @@
-{% include setup_data.html %}
-{% include setup_locations_by_year.inc %}
+{% include setup_data.html %} {% include setup_locations_by_year.inc %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     {% include header.html %}
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+
+    <title>Summer Institute in Computational Social Science — Locations</title>
   </head>
   <body class="sub-page">
     {% include navbar.html %}
     <!-- Start content -->
-    {% include hero_secondary.html %}
-
-    {% include breadcrumb.html %}
+    {% include hero_secondary.html %} {% include breadcrumb.html %}
     <div class="container">
+      <!-- Locations -->
       <div class="row">
-        <div class="col-md-4">
-          {% include sidebar.html %}
-        </div>
-        <div class="col-sm-8">
+        <div class="col-sm-12">
           <h2 class="display-4">Locations, past and present</h2>
-          <div class="row">
-            <div class="col-sm-12">
-              {{content}}
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-12 mb-5">
-              {% include map.html  %}
-            </div>
-          </div>
-        <div class="row">
-          {% include locations_two_column.html %}
+          <p class="lead">
+            Starting in 2018, the Summer Institutes in Computational Social
+            Science (SICSS) began including partner locations in order to
+            increase the number of participants.
+          </p>
         </div>
+        <!--/col-->
       </div>
+      <!--/row-->
+      <div class="row">
+        <div class="col-sm-12 mb-5">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe
+              src="https://www.google.com/maps/d/embed?mid=1209PanKId92WptsFB62RO_BvpFcOg7kp"
+            ></iframe>
+          </div>
+        </div>
+        <!--/col-->
       </div>
-    </div>
+      <!--/row-->
 
-    <section class="bg-secondary text-white py-5" style="margin-bottom: 0">
-      <div class="container>
+      <div class="row">
+        <div class="col-sm-12">
+          <ul
+            class="nav nav-tabs mb-5 d-none d-sm-flex"
+            id="myTab"
+            role="tablist"
+          >
+          {% for year in locations_by_year %}
+            {% if forloop.first == true %}
+              <li class="nav-item">
+                <a class="nav-link active" id="year{{year.year}}-tab" data-toggle="tab" href="#year{{year.year}}" role="tab" aria-controls="year{{year.year}}"
+                  aria-selected="true">{{year.year}}</a>
+              </li>
+            {% else %}
+              <li class="nav-item">
+                <a class="nav-link" id="year{{year.year}}-tab" data-toggle="tab" href="#year{{year.year}}" role="tab" aria-controls="year{{year.year}}"
+                  aria-selected="false">{{year.year}}</a>
+              </li>
+            {% endif %}
+          {% endfor %}
+          </ul>
+          <div class="tab-content" id="myTabContent">
+            <div
+              class="tab-pane fade show active"
+              id="year2020"
+              role="tabpanel"
+              aria-labelledby="year2020-tab"
+            >
+              <div class="row">
+                <div class="col-sm-12">
+                  <h3>2020</h3>
+                </div>
+                <!--/col-sm-12-->
+                <div class="col-sm-4 mb-5">
+                  <div class="card border-0" id="bamberg">
+                    <img
+                      class="card-img-top"
+                      src="images/bamberg.jpg"
+                      alt="Find a location"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">University of Bamberg</h5>
+                      <h6 class="card-subtitle mb-4 text-muted">
+                        Bamberg, Germany
+                      </h6>
+                      <a
+                        href="bamberg.html"
+                        class="btn btn-dark btn-sm stretched-link"
+                        >Learn More</a
+                      >
+                    </div>
+                    <!-- /card-body -->
+                  </div>
+                  <!-- /card -->
+                </div>
+                <!-- /col -->
+
+                <div class="col-sm-4 mb-5">
+                  <div class="card border-0" id="boston">
+                    <img
+                      class="card-img-top"
+                      src="images/location.jpg"
+                      alt="Find a location"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        Massachusetts Institute of Technology
+                      </h5>
+                      <h6 class="card-subtitle mb-4 text-muted">
+                        Boston, Massachusetts
+                      </h6>
+
+                      <a href="#" class="btn btn-dark btn-sm stretched-link"
+                        >Learn More</a
+                      >
+                    </div>
+                    <!-- /card-body -->
+                  </div>
+                  <!-- /card -->
+                </div>
+                <!-- /col -->
+
+                <div class="col-sm-4 mb-5">
+                  <div class="card border-0" id="boulder">
+                    <img
+                      class="card-img-top"
+                      src="images/location.jpg"
+                      alt="Find a location"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">University of Colorado Boulder</h5>
+                      <h6 class="card-subtitle mb-4 text-muted">
+                        Boulder, Colorado
+                      </h6>
+
+                      <a href="#" class="btn btn-dark btn-sm stretched-link"
+                        >Learn More</a
+                      >
+                    </div>
+                    <!-- /card-body -->
+                  </div>
+                  <!-- /card -->
+                </div>
+                <!-- /col -->
+
+                <div class="col-sm-4 mb-5">
+                  <div class="card border-0" id="cape_town">
+                    <img
+                      class="card-img-top"
+                      src="images/location.jpg"
+                      alt="Find a location"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">University of Cape Town</h5>
+                      <h6 class="card-subtitle mb-4 text-muted">
+                        Cape Town, South Africa
+                      </h6>
+
+                      <a href="#" class="btn btn-dark btn-sm stretched-link"
+                        >Learn More</a
+                      >
+                    </div>
+                    <!-- /card-body -->
+                  </div>
+                  <!-- /card -->
+                </div>
+                <!-- /col -->
+              </div>
+              <!-- /row -->
+            </div>
+            <div
+              class="tab-pane fade"
+              id="year2019"
+              role="tabpanel"
+              aria-labelledby="year2019-tab"
+            >
+              <div class="row">
+                <div class="col-sm-12">
+                  <h3>2019</h3>
+                </div>
+                <!--/col-sm-12-->
+                <div class="col-sm-4 mb-5">
+                  <div class="card border-0" id="chicago">
+                    <img
+                      class="card-img-top"
+                      src="images/location.jpg"
+                      alt="Find a location"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Northwestern University</h5>
+                      <h6 class="card-subtitle mb-4 text-muted">
+                        Chicago, Illinois
+                      </h6>
+
+                      <a href="#" class="btn btn-dark btn-sm stretched-link"
+                        >Learn More</a
+                      >
+                    </div>
+                    <!-- /card-body -->
+                  </div>
+                  <!-- /card -->
+                </div>
+                <!-- /col -->
+
+                <div class="col-sm-4 mb-5">
+                  <div class="card border-0" id="durham">
+                    <img
+                      class="card-img-top"
+                      src="images/location.jpg"
+                      alt="Find a location"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Duke University</h5>
+                      <h6 class="card-subtitle mb-4 text-muted">
+                        Durham, North Carolina
+                      </h6>
+
+                      <a href="#" class="btn btn-dark btn-sm stretched-link"
+                        >Learn More</a
+                      >
+                    </div>
+                    <!-- /card-body -->
+                  </div>
+                  <!-- /card -->
+                </div>
+                <!-- /col -->
+
+                <div class="col-sm-4 mb-5">
+                  <div class="card border-0" id="helsinki">
+                    <img
+                      class="card-img-top"
+                      src="images/location.jpg"
+                      alt="Find a location"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">
+                        Aalto University, University of Helsinki, Helsinki
+                        Institute for Information Technology HIIT, Rajapinta ry
+                      </h5>
+                      <h6 class="card-subtitle mb-4 text-muted">
+                        Helsinki, Finland
+                      </h6>
+
+                      <a href="#" class="btn btn-dark btn-sm stretched-link"
+                        >Learn More</a
+                      >
+                    </div>
+                    <!-- /card-body -->
+                  </div>
+                  <!-- /card -->
+                </div>
+                <!-- /col -->
+
+                <div class="col-sm-4 mb-5">
+                  <div class="card border-0" id="istanbul">
+                    <img
+                      class="card-img-top"
+                      src="images/location.jpg"
+                      alt="Find a location"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title"></h5>
+                      <h6 class="card-subtitle mb-4 text-muted">
+                        Istanbul, Turkey
+                      </h6>
+
+                      <a href="#" class="btn btn-dark btn-sm stretched-link"
+                        >Learn More</a
+                      >
+                    </div>
+                    <!-- /card-body -->
+                  </div>
+                  <!-- /card -->
+                </div>
+                <!-- /col -->
+              </div>
+              <!-- /row -->
+            </div>
+            <div
+              class="tab-pane fade"
+              id="contact"
+              role="tabpanel"
+              aria-labelledby="contact-tab"
+            >
+              ...
+            </div>
+          </div>
+          <!-- /tab-content -->
+        </div>
+        <!-- /col-sm-12 -->
+      </div>
+      <!-- / row -->
+    </div>
+    <!-- /container -->
+
+    <section class="bg-secondary text-white py-5 mt-5">
+      <div class="container">
         <div class="row">
           <div class="col-sm-12">
-            <h2 class="display-5 text-center text-uppercase font-weight-light">Apply to a host location</h2>
-            <p class="text-center lead">You can host a partner location of the Summer Institutes of Computational Social Science (SICSS) at your university,
-            company, NGO, or government agency.</p>
-            <p class=text-center><a href="https://compsocialscience.github.io/summer-institute/host#hosting_a_partner_location" class="btn btn-dark">Learn More</a></p>
+            <h2 class="display-5 text-center text-uppercase font-weight-light">
+              Host a Location
+            </h2>
+            <p class="text-center lead">
+              You can host a partner location of the Summer Institutes of
+              Computational Social Science (SICSS) at your university, company,
+              NGO, or government agency.
+            </p>
+            <p class="text-center">
+              <a href="host.html" class="btn btn-dark">Learn More</a>
+            </p>
           </div>
+          <!--col-->
         </div>
+        <!--/row-->
       </div>
+      <!--/container-->
     </section>
-    {% include footer.html %}
+
+    <footer class="bg-dark py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-2">
+            <a class="" href="index.html">
+              <img src="images/sicss-logo.svg" width="" height="30" alt="" />
+            </a>
+            <p class="text-light py-3"><small>&copy; 2019 SICSS</small></p>
+          </div>
+          <!--/col-->
+          <div class="col-sm-10">
+            <ul class="nav justify-content-end">
+              <li class="nav-item">
+                <a class="nav-link text-light" href="index.html"
+                  >Home <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="locations.html"
+                  >Locations</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="curriculum.html"
+                  >Curriculum</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="people.html">People</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="apply.html">Apply</a>
+              </li>
+            </ul>
+          </div>
+          <!--/col-->
+        </div>
+        <!--/row-->
+      </div>
+      <!--/container-->
+    </footer>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
