--- a/_layouts/locations.html
+++ b/_layouts/locations.html
@@ -74,34 +74,36 @@
                   {% for year_location in year.locations %}
                   {% assign location_data = year_location.location %}
                   {% assign apply_data = year_location.apply %}
-                      <!-- <script>
-                        var data = {{year_location | json}}
-                        setTimeout(function () {
-                         console.log('FIRING THIS ONE')
-                         console.log(data)
-                        }, 20);
-                      </script> -->
-                    <div class="col-sm-4 mb-5">
-                      <div class="card border-0" id="bamberg">
-                        <div class="embed-responsive embed-responsive-16by9">
-                          <img class="embed-responsive-item card-img-top" src="{{location_data.image}}" alt="Find a location" loading="lazy" />
+                  {% if location_data.image %}
+                    {% assign image_prefix = location_data.image | slice: 0, 4 %}
+                    {% if image_prefix == "http" %}
+                      {% assign image_url = location_data.image %}
+                    {% else %}
+                      {% assign image_url = location_data.image | prepend: site.baseurl %}
+                    {% endif %}
+                      <div class="col-sm-4 mb-5">
+                        <div class="card border-0" id="bamberg">
+                          <div class="embed-responsive embed-responsive-16by9">
+                            <img class="embed-responsive-item card-img-top" src="{{image_url}}" alt="Find a location"
+                              loading="lazy" />
+                          </div>
+                          <div class="card-body">
+                            <h5 class="card-title">{{location_data.title}}</h5>
+                            <h6 class="card-subtitle mb-4 text-muted">
+                              {{location_data.subtitle}}
+                            </h6>
+                            <p class="card-text">{{location_data.description}}</p>
+                            <a href="{{site.baseurl}}/{{location_data.year}}/{{location_data.link}}" class="btn btn-dark btn-sm stretched-link">Learn More</a>
+                            {% if apply_data.title and location_data.apply_button != "hidden" %}
+                              <a href="{{site.baseurl}}/{{location_data.year}}/{{location_data.link}}/apply"
+                              class="btn btn-dark btn-sm">Apply</a>
+                            {% endif %}
+                          </div>
                         </div>
-                        <div class="card-body">
-                          <h5 class="card-title">{{location_data.title}}</h5>
-                          <h6 class="card-subtitle mb-4 text-muted">
-                            {{year_location.image}}
-                            Bamberg, Germany
-                          </h6>
-                          <a href="bamberg.html" class="btn btn-dark btn-sm stretched-link">Learn More</a>
-                        </div>
-                        <!-- /card-body -->
                       </div>
-                      <!-- /card -->
-                    </div>
-                    <!-- /col -->
+                  {% endif %}
                   {% endfor %}
               </div>
-              <!-- /row -->
             </div>
             {% endfor %}
             <div
