--- a/_layouts/bootcamp.html
+++ b/_layouts/bootcamp.html
@@ -144,7 +144,7 @@
           </ul>
           <h5>Exercises</h5>
           <ul>
-            <li>Coming Soon</li>
+            <li><a href="{{ site.baseurl }}/boot_camp/r_basics">R Basics Quiz</a></li>
           </ul>
         </div>
         <!-- /col -->
