--- a/_layouts/bootcamp.html
+++ b/_layouts/bootcamp.html
@@ -235,7 +235,7 @@
           </ul>
           <h5>Exercises</h5>
           <ul>
-            <li>Coming Soon</li>
+            <li><a href="{{ site.baseurl }}/boot_camp/data_visualization">Data Visualization Quiz</a></li>
           </ul>
         </div>
         <!-- /col -->
@@ -281,7 +281,7 @@
           </ul>
           <h5>Exercises</h5>
           <ul>
-            <li>Coming Soon</li>
+            <li><a href="{{ site.baseurl }}/boot_camp/basic_programming">Basic Programming Quiz</a></li>
           </ul>
         </div>
         <!-- /col -->
@@ -325,7 +325,7 @@
           </ul>
           <h5>Exercises</h5>
           <ul>
-            <li>Coming Soon</li>
+            <li><a href="{{ site.baseurl }}/boot_camp/modelling">Modelling Quiz</a></li>
           </ul>
         </div>
         <!-- /col -->
@@ -360,7 +360,7 @@
           </ul>
           <h5>Exercises</h5>
           <ul>
-            <li>Coming Soon</li>
+            <li>No Quiz</li>
           </ul>
         </div>
         <!-- /col -->
